added main and footer sections to html file

--- a/index.html
+++ b/index.html
@@ -31,15 +31,47 @@
     </section>
     <section id="workGrid">
       <div id="furniture-store" class="workGridArea">
-      </div>
-      <div id="code-refactor" class="workGridArea">
-      </div>
-      <div id="equilibrium" class="workGridArea">
-      </div>
+        </div>
+        <div id="code-refactor" class="workGridArea">
+        </div>
+        <div id="equilibrium" class="workGridArea">
+        </div>
     </section>
-  </main>
-  <footer class="page-section contact" id="contact">
-    <h2>Contact Me</h2>
+    <section class= "subHeading">
+      <h3>About Me</h3>
+    </section>
+    <!-- <section id="contact" class="page-section-contact">
+    </section> -->
+    <section id="about">
+      <div id="about-me-image" class="aboutGridArea">
+      </div>
+      <div id="about-me-text">
+        <h2>Sandra Guerra</h2>
+        <h3>Web-Developer & Business-Management</h3>
+        <p class="spacing-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eius, iure corrupti porro voluptate fuga, aliquam architecto rem voluptates cupiditate assumenda, laborum ea repellendus animi. Officiis eligendi fuga consequuntur soluta?</p>
+        <h2 class="spacing-content">SKILLS</h2>
+        <h3 class="spacing-content">PROGRAMMING LANGUAGES & TOOLS</h3>
+        <ul id="skills-list" class="spacing-content">
+          <li>&#10003; HTML</li>
+          <li>&#10003; CSS</li>
+        </ul>
+        <h3 class="spacing-content">WORKFLOW</h3>
+        <p class="spacing-content">Mobile-First, Responsive Design</p>    
+      </div>
+    </section> 
+    <section class= "subHeading">
+      <h3>Contact Me</h3>
+    </section>
+  </main> 
+    <!-- <div id="contactMe-section">
+    </div> -->
+  <footer>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    </div>
   </footer>
+  
 </body>
 </html>
