Added interactivity to links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <header>
     <nav>
         <ul class="nav-right-section">
-            <li><a href="">About Me</a></li>
-            <li><a href="">Work</a></li>
-            <li><a href="">Contact Me</a></li>
-            <li><a href="">Resume</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#aboutMe">About Me</a></li>
+            <li><a href="#contactMe">Contact Me</a></li>
             <li>
         </ul>
     </nav>
@@ -27,7 +26,7 @@
   </section>
   <main class="page-wrapper">
     <section class="subHeading">
-      <h3>Work</h3>
+      <h3 id="work">Work</h3>
     </section>
     <section id="workGrid">
       <div id="furniture-store" class="workGridArea">
@@ -38,10 +37,8 @@
         </div>
     </section>
     <section class= "subHeading">
-      <h3>About Me</h3>
+      <h3 id="aboutMe">About Me</h3>
     </section>
-    <!-- <section id="contact" class="page-section-contact">
-    </section> -->
     <section id="about">
       <div id="about-me-image" class="aboutGridArea">
       </div>
@@ -60,12 +57,12 @@
       </div>
     </section> 
     <section class= "subHeading">
-      <h3>Contact Me</h3>
+      <h3 id="contactMe">Contact Me</h3>
     </section>
   </main> 
     <!-- <div id="contactMe-section">
     </div> -->
-  <footer>
+  <footer id="footer">
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
