added media queries for different vieport sizes

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
     </section>
     <section id="workGrid">
       <div id="furniture-store" class="workGridArea">
+        <div class="heading">Furniture Store Code Refactor</div>
         </div>
         <div id="code-refactor" class="workGridArea">
+          <div class="heading">Horiseon Code Refactor</div>
         </div>
         <div id="equilibrium" class="workGridArea">
+          <div class="heading">NFT Preview Card Component FEM</div>
         </div>
     </section>
     <section class= "subHeading">
@@ -52,7 +55,7 @@
           <li>&#10003; HTML</li>
           <li>&#10003; CSS</li>
         </ul>
-        <h3 class="spacing-content">WORKFLOW</h3>
+        <h3  id="workflow" class="spacing-content">WORKFLOW</h3>
         <p class="spacing-content">Mobile-First, Responsive Design</p>    
       </div>
     </section> 
@@ -64,9 +67,9 @@
     </div> -->
   <footer id="footer">
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">Twitter</a>
+      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">Website</a>
     </div>
   </footer>
   
