added href link for NFT card component project to html file

--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-gb">
+
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+    rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
   <title>Sandra Guerra Porfolio</title>
 </head>
+
 <body>
   <header>
     <nav>
-        <ul class="nav-right-section">
-            <li><a href="#work">Work</a></li>
-            <li><a href="#aboutMe">About Me</a></li>
-            <li><a href="#contactMe">Contact Me</a></li>
-            <li>
-        </ul>
+      <ul class="nav-right-section">
+        <li><a href="#work">Work</a></li>
+        <li><a href="#aboutMe">About Me</a></li>
+        <li><a href="#contactMe">Contact Me</a></li>
+        <li>
+      </ul>
     </nav>
-</header>
+  </header>
   <section class="hero-banner">
     <div>
-      <h1>Sandra Guerra</h1> 
-    </div> 
+      <h1>Sandra Guerra</h1>
+    </div>
     <div>
-      <h2>Web-Developer</h2> 
-    </div> 
+      <h2>Web-Developer</h2>
+    </div>
   </section>
   <main class="page-wrapper">
     <section class="subHeading">
       <h3 id="work">Work</h3>
     </section>
     <section id="workGrid">
-      <div id="furniture-store" class="workGridArea">
+      <a href="https://smguerra.github.io/furniture-store-code-refactor-/" id="furniture-store" class="workGridArea">
         <div class="heading">Furniture Store Code Refactor</div>
-        </div>
-        <div id="code-refactor" class="workGridArea">
-          <div class="heading">Horiseon Code Refactor</div>
-        </div>
-        <div id="equilibrium" class="workGridArea">
-          <div class="heading">NFT Preview Card Component FEM</div>
-        </div>
+      </a>
+      <a href="https://smguerra.github.io/accessibility-code-refactor/" id="code-refactor" class="workGridArea">
+        <div class="heading">Horiseon Code Refactor</div>
+      </a>
+      <a href="https://sanguerrag.github.io/NFT-Preview-card-component/" id="equilibrium" class="workGridArea">
+        <div class="heading">NFT Card Component FEM</div>
+      </a>
     </section>
-    <section class= "subHeading">
+    <section class="subHeading">
       <h3 id="aboutMe">About Me</h3>
     </section>
     <section id="about">
@@ -48,30 +51,33 @@
       <div id="about-me-text">
         <h2>Sandra Guerra</h2>
         <h3>Web-Developer & Business-Management</h3>
-        <p class="spacing-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eius, iure corrupti porro voluptate fuga, aliquam architecto rem voluptates cupiditate assumenda, laborum ea repellendus animi. Officiis eligendi fuga consequuntur soluta?</p>
+        <p class="spacing-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat eius, iure corrupti
+          porro voluptate fuga, aliquam architecto rem voluptates cupiditate assumenda, laborum ea repellendus animi.
+          Officiis eligendi fuga consequuntur soluta?</p>
         <h2 class="spacing-content">SKILLS</h2>
         <h3 class="spacing-content">PROGRAMMING LANGUAGES & TOOLS</h3>
         <ul id="skills-list" class="spacing-content">
           <li>&#10003; HTML</li>
           <li>&#10003; CSS</li>
         </ul>
-        <h3  id="workflow" class="spacing-content">WORKFLOW</h3>
-        <p class="spacing-content">Mobile-First, Responsive Design</p>    
+        <h3 id="workflow" class="spacing-content">WORKFLOW</h3>
+        <p class="spacing-content">Mobile-First, Responsive Design</p>
       </div>
-    </section> 
-    <section class= "subHeading">
+    </section>
+    <section class="subHeading">
       <h3 id="contactMe">Contact Me</h3>
     </section>
-  </main> 
-    <!-- <div id="contactMe-section">
+  </main>
+  <!-- <div id="contactMe-section">
     </div> -->
   <footer id="footer">
     <div class="bottom-container">
-      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">LinkedIn</a>
-      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">Twitter</a>
-      <a class="footer-link" href="https://github.com/smguerra/portfolio-project">Website</a>
+      <a class="footer-link" href="#">LinkedIn</a>
+      <a class="footer-link" href="#">Twitter</a>
+      <a class="footer-link" href="https://github.com/smguerra">Website</a>
     </div>
   </footer>
-  
+
 </body>
+
 </html>
