changed color heading section on css file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="heading">Horiseon Code Refactor</div>
       </a>
       <a href="https://sanguerrag.github.io/NFT-Preview-card-component/" id="equilibrium" class="workGridArea">
-        <div class="heading">NFT Card Component FEM</div>
+        <div class="heading">NFT Card Component</div>
       </a>
     </section>
     <section class="subHeading">
