--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
     rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
@@ -20,6 +20,9 @@
     </nav>
   </header>
   <section class="hero-banner">
+    <div>
+      <img src="./assets/images/woman-1353825_640.png" alt="Avatar" class="avatar">
+    </div>
     <div>
       <h1>Sandra Guerra</h1>
     </div>
@@ -77,7 +80,5 @@
       <a class="footer-link" href="https://github.com/smguerra">Website</a>
     </div>
   </footer>
-
 </body>
-
 </html>
