added website information to html

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     </div> -->
   <footer id="footer">
     <div class="bottom-container">
-      <a class="footer-link" href="#">LinkedIn</a>
-      <a class="footer-link" href="#">Twitter</a>
       <a class="footer-link" href="https://github.com/smguerra">Website</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="#">LinkedIn</a>
     </div>
   </footer>
 </body>
